# vpr-deviate

./: CMakeLists.txt  README.md  compile_flags.txt
cmake/: vpr-deviate-config.cmake.in
examples/: example.cpp  hook.cpp  makefile
examples/01.inplace_hook/: README.md  main.cpp  makefile
examples/02.dll_inject/: README.md  main.c  makefile  payload.cpp
include/vpr/: deviate.h  deviate.hpp
ut/: CMakeLists.txt  run_tests.py
vpr/: deviate.h  deviate.hpp  memory.h
